--- a/app/views/consumers/index.html.haml
+++ b/app/views/consumers/index.html.haml
@@ -41,7 +41,7 @@
         subGrid: true,
         subGridUrl: '#{consumer_facts_url}',
         subGridModel: [{
-            name: ['Key', 'Value'],
+            name: ['Fact', 'Value'],
             width: ['200', '400'],
             mapping: ['key', 'value'],
         }],        
