--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -4,10 +4,11 @@
 #products_pager
 #certDialog
     %pre
-#content      
+#pcontent  
     .ui-widget.ui-widget-content.ui-corner-all.div_left     
         #tree
-    .ui-widget.ui-widget-content.ui-corner-all.div_right     
+    .ui-widget.ui-widget-content.ui-corner-all.div_right  
+        fdksjfdslkj   
      
  
 :javascript
