--- a/app/views/layouts/_scripts_and_sheets.html.haml
+++ b/app/views/layouts/_scripts_and_sheets.html.haml
@@ -11,4 +11,5 @@
 = javascript_include_tag "jquery.jqGrid.min"
 = javascript_include_tag "jquery.form"
 = javascript_include_tag "jquery.cookie"   
-= javascript_include_tag "jquery.jstree"   
+= javascript_include_tag "jquery.jstree"
+= javascript_include_tag "jquery.colorize-2.0.0"    
