basic product layout

--- a/app/views/consumers/index.html.haml
+++ b/app/views/consumers/index.html.haml
@@ -4,7 +4,7 @@
 #consumers_pager
 #certDialog
     %pre
-#detail.ui-widget-content
+#detail.ui-widget.ui-widget-content.ui-corner-all
   
 :javascript
     var lastsel; 
