--- a/app/views/layouts/_scripts_and_sheets.html.haml
+++ b/app/views/layouts/_scripts_and_sheets.html.haml
@@ -13,3 +13,4 @@
 = javascript_include_tag "jquery.cookie"   
 = javascript_include_tag "jquery.jstree"
 = javascript_include_tag "jquery.colorize-2.0.0"    
+= javascript_include_tag "jquery.layout-1.2.0"   
