--- a/public/stylesheets/headpin.css
+++ b/public/stylesheets/headpin.css
@@ -17,54 +17,6 @@ pre {
   font-size: 11px;
 }
 
-.fieldWithErrors {
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
-
-#errorExplanation {
-  width: 400px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-}
-
-#errorExplanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: -7px;
-  background-color: #c00;
-  color: #fff;
-}
-
-#errorExplanation p {
-  color: #333;
-  margin-bottom: 0;
-  padding: 5px;
-}
-
-#errorExplanation ul li {
-  font-size: 12px;
-  list-style: square;
-}
-
-h1 a {
-    text-decoration: none ;
-}
-
-.red {
-	color: #FF0000;
-}
-
-.green {
-	color: #00FC1D;
-}
-
 #pcontent{
     min-width: 900
     width: 900;
@@ -74,20 +26,20 @@ h1 a {
 }
 
 .div_left {
-    width: 500px;
+    width: 400px;
     height: 600;
     overflow: auto;
-    float: left;
 }
 
 .div_right {
-    width: 400;
+    width: 500;
     padding: 2px;
     height: 600;
     min-height: 600;
     overflow: auto;
-    margin-left: 504px;
+    margin-left: 60%;
 }
+
 #dialog {
     height: 500;
     width: 100%;
